# MPHF-Experiments

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Docker.md  Dockerfile  README.md  comparison.cpp  comparisonCuda.cu  comparisonDiss.cpp  comparisonGpu.cpp  comparisonMorphis.cpp  comparisonN.cpp  comparisonPtHash.cpp  comparisonQueries.cpp  comparisonScaling.cpp  comparisonThreads.cpp  spack.yaml
.github/workflows/: build.yml
benchmark/: BBHashContender.h  BipartiteShockHashContender.h  BipartiteShockHashFlatContender.h  CmphContender.h  ConsensusContender.h  Contender.h  DensePartitionedPTHashContender.h  FchContender.h  FiPSContender.h  GpuPhobicContender.h  GpuPtHashContender.h  GpuRecSplitContender.h  MorphisHashContender.h  MorphisHashFlatContender.h  MphfWbpmContender.h  PTHashContender.h  PartitionedPTHashContender.h  PartitionedSIMDRecSplitContender.h  PartitionedSicHashContender.h  RecSplitContender.h  RecSplitRotateContender.h  RustContender.h  RustFmphContender.h  RustFmphGoContender.h  RustPhastContender.h  RustPtrHashContender.h  RustSrsContender.h  SIMDRecSplitContender.h  ShockHashContender.h  ShockHashSimdContender.h  SicHashContender.h
contenders/bucketplacement/: ChdContender.cpp  ChdContender.h  DensePartitionedPTHashContender.cpp  DensePartitionedPTHashContender.h  FchCmphContender.cpp  FchCmphContender.h  FchContender.cpp  FchContender.h  GpuPhobicContender.cpp  GpuPhobicContender.h  PTHashContender.cpp  PTHashContender.h  PartitionedPTHashContender.cpp  PartitionedPTHashContender.h  PhobicContender.cpp  PhobicContender.h  RustPhastContender.cpp  RustPhastContender.h  RustPtrHashContender.cpp  RustPtrHashContender.h
contenders/consensus/: ConsensusContender.cpp  ConsensusContender.h
contenders/fingerprinting/: BBHashContender.cpp  BBHashContender.h  FiPSContender.cpp  FiPSContender.h  RustFmphContender.cpp  RustFmphContender.h  RustFmphGoContender.cpp  RustFmphGoContender.h
contenders/recsplit/: GpuRecSplitContender.h  PartitionedSIMDRecSplitContender.h  RecSplitContender.cpp  RecSplitContender.h  RecSplitRotateContender.cpp  RecSplitRotateContender.h  SIMDRecSplitContender.cpp  SIMDRecSplitContender.h
contenders/retrievalbased/: BdzContender.cpp  BdzContender.h  BmzContender.cpp  BmzContender.h  ChmContender.cpp  ChmContender.h  MphfWbpmContender.cpp  MphfWbpmContender.h  SicHashContender.cpp  SicHashContender.h
contenders/shockhash/: BipartiteShockHashContender.cpp  BipartiteShockHashContender.h  BipartiteShockHashFlatContender.cpp  BipartiteShockHashFlatContender.h  MorphisHashContender.cpp  MorphisHashContender.h  MorphisHashFlatContender.cpp  MorphisHashFlatContender.h  ShockHashContender.cpp  ShockHashContender.h  ShockHashSimdContender.cpp  ShockHashSimdContender.h
lib/: BenchmarkData.h  Contender.cpp  Contender.h  RustContender.cpp  RustContender.h
rust/: Cargo.toml
rust/src/: fmph_contender.rs  fmph_go_contender.rs  lib.rs  ph.rs  phast_contender.rs  ptr_hash.rs  ptr_hash_contender.rs
scripts/: queries.sh  scalingN.sh  scalingStrong.sh  scalingSurveyByN.sh  scalingSurveyQueryThreads.sh  scalingSurveyStrong.sh  scalingSurveyWeak.sh  scalingWeak.sh  scatterplot100M.sh  scatterplotMinimalByThreads.sh  tableSurvey.sh  threads.sh
scripts/dockerVolume/: _competitorNames.txt  comparison-N.sh  comparison-N.tex  dominance-map.sh  dominance-map.tex  pareto-threads.sh  pareto-threads.tex  pareto-zoomed.sh  pareto-zoomed.tex  pareto.sh  pareto.tex  table-thesis-lehmann.sh  table-thesis-lehmann.tex
src/: README.md  comparison.cpp  comparisonCuda.cu  comparisonQueries.cpp  comparisonScaling.cpp  scalingSurvey.cpp  scalingThesisLehmann.cpp  tableMorphisHash.cpp  tablePHast.cpp  tablePhobic.cpp  tablePtrHash.cpp  tableShockHash.cpp  tableSurvey.cpp  tableThesisLehmann.cpp
