[package]
name = "mphf_experiments"
version = "0.1.0"
edition = "2021"

[lib]
name = "mphf_experiments"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
ph = { version = "0.9", features = ["gxhash"] }
seedable_hash = { version = "0.1.6", features = ["gxhash"] }
mem_dbg = "0.2.4"
ptr_hash = { path = "../extlib/ptrhash" }
rayon = "1.7.0"
