[package]
name = "mphf_experiments"
version = "0.1.0"
edition = "2021"

[lib]
name = "mphf_experiments"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
ph = { version = "=0.9.2", features = ["gxhash"] }
seedable_hash = { version = "0.1.6", features = ["gxhash"] }
mem_dbg = "0.3"
ptr_hash = "=1.1.0"
cacheline-ef = "=1.1.0"
rayon = "1.7.0"
